--- a/index.html
+++ b/index.html
@@ -5,50 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>parkinglot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .navbar-nav .nav-link,
-        .navbar-nav .nav-link:focus, 
-        .navbar-nav .nav-link:hover {
-            font-weight: bold; 
-        }
-        .navbar {
-            justify-content: space-between;
-            position: fixed; 
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-        html,body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        #map {
-            width: 100%;
-            height: 50%;
-            display: block;
-            margin: 0 auto;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border: 1px solid #ddd;
-        }
-        .update-section {
-            text-align: right;
-            margin: 10px;
-        }
-        .update-section span {
-            margin-left: 20px;
-            font-size: 0.9em;
-            color: grey;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    
 </head>
 <body>  
 
@@ -86,7 +44,7 @@
         <button id="refresh-btn" class="btn btn-primary">검색</button>
         <span id="last-updated">마지막 업데이트: </span>
     </div>
-    <div id="parking-info-section" class="parking-info-section">
+    <div id="parking-info-section">
         <h2 style="margin: 40px;">주차장 정보</h2>
     <table>
         <thead>
@@ -108,7 +66,7 @@
     </div>
 
     <!-- 주차장 감면 정보 섹션 -->
-    <div id="discount-info-section" class="discount-info">
+    <div id="discount-info-section">
         <h2 style="margin: 40px;">주차장 감면 정보</h2>
         <table class="discount-table">
             <thead>
